Grid behaviour on automatic resize improved, now able to prevent row/column deletion if icons could not fit and trigger deletion if they could, such that it never shrinks enough to alienate icons from the grid

--- a/plexos/app/sys/Settings/Grid/css/properties.css
+++ b/plexos/app/sys/Settings/Grid/css/properties.css
@@ -88,9 +88,6 @@
     border-bottom: 1px solid #c7c7c7;
     border-right: 1px solid #c7c7c7;
 }
-.graph_container {
-
-}
 .grid_editable.ID_TASKID{
     width: 100%;
     margin-left: auto;
