--- a/plexos/res/components/graphs/desktop/grid_graph/grid_graph.css
+++ b/plexos/res/components/graphs/desktop/grid_graph/grid_graph.css
@@ -52,17 +52,23 @@
     font-size: 16px;
 }
 .ID_TASKID.grid_graph>span:nth-child(5){
-    top: 60px;
-    left: 220px;
+    top: 64px;
+    left: 225px;
     color: #888888;
 }
 .ID_TASKID.grid_graph>div:nth-child(6){
     position: absolute;
     display: block;
-    top: 77px;
+    top: 74px;
     left: 214px;
     width: 30px;
     height: 30px;
+
+    z-index: 2;
+    background-image: url('./grid_graph_hidden.svg');
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 .ID_TASKID.grid_graph>div:nth-child(7){
     position: absolute;
